# nostromo

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.copilot-skills/: README.development.md  SKILLS-DIGEST.md
.copilot-skills/architecture/arc42-architecture-documentation/: SKILL.md
.copilot-skills/collaboration/remembering-conversations/tool/: package-lock.json
.copilot-skills/debugging/root-cause-tracing/: SKILL.md
.copilot-skills/meta/gardening-skills-wiki/: SKILL.md
.copilot-skills/meta/using-portable-skills/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: history.prompt.md  modelUsage.prompt.md  skills.prompt.md  thought.prompt.md
.github/workflows/: build-binaries.yml  publish-pypi.yml  release.yml  tests.yml  update-homebrew.yml
docs/: api-reference.md  cli-usage.md  configuration.md  installation.md  security.md  vuejs-integration.md
